--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id("io.qameta.allure") version "2.11.2"
-    id "io.freefair.lombok" version "8.0.1"
+    id 'io.qameta.allure' version '2.11.2'
+    id 'io.freefair.lombok' version '8.0.1'
 }
 
 group 'ru.lomakosv'
@@ -13,41 +13,43 @@ repositories {
 
 allure {
     report {
-        version.set("2.22.0")
+        version.set('2.22.0')
     }
     adapter {
         aspectjWeaver.set(true)
         frameworks {
             junit5 {
-                adapterVersion.set("2.22.0")
+                adapterVersion.set('2.22.0')
             }
         }
     }
 }
+
 compileTestJava {
     options.encoding = 'UTF-8'
 }
+
 dependencies {
     testImplementation(
-            "org.aeonbits.owner:owner:1.0.12",
-            "com.codeborne:selenide:6.14.1",
-            "io.rest-assured:rest-assured:5.3.0",
-            "org.junit.jupiter:junit-jupiter:5.9.2",
-            "org.slf4j:slf4j-simple:2.0.7",
-            "com.fasterxml.jackson.core:jackson-databind:2.15.0",
-            "io.qameta.allure:allure-rest-assured:2.22.0",
-            "com.github.javafaker:javafaker:1.0.2",
-            "io.qameta.allure:allure-selenide:2.21.0",
-            "org.assertj:assertj-core:3.23.1",
-            "com.fasterxml.jackson.core:jackson-core:2.15.0",
-            "net.lingala.zip4j:zip4j:2.11.5",
-            "ru.yandex.qatools.ashot:ashot:1.5.4",
+            'org.aeonbits.owner:owner:1.0.12',
+            'com.codeborne:selenide:6.14.1',
+            'io.rest-assured:rest-assured:5.3.0',
+            'org.junit.jupiter:junit-jupiter:5.9.2',
+            'org.slf4j:slf4j-simple:2.0.7',
+            'com.fasterxml.jackson.core:jackson-databind:2.15.0',
+            'io.qameta.allure:allure-rest-assured:2.22.0',
+            'com.github.javafaker:javafaker:1.0.2',
+            'io.qameta.allure:allure-selenide:2.21.0',
+            'org.assertj:assertj-core:3.23.1',
+            'com.fasterxml.jackson.core:jackson-core:2.15.0',
+            'net.lingala.zip4j:zip4j:2.11.5',
+            'ru.yandex.qatools.ashot:ashot:1.5.4'
     )
 }
 
 task deleteAllure(type: Delete) {
-    delete "build/allure-results"
-    delete "build/report"
+    delete 'build/allure-results'
+    delete 'build/report'
 }
 
 test {
@@ -67,9 +69,8 @@ test {
 
     testLogging {
         lifecycle {
-            events "started", "skipped", "failed", "standard_error", "standard_out"
-            exceptionFormat "short"
+            events 'started', 'skipped', 'failed', 'standard_error', 'standard_out'
+            exceptionFormat 'short'
         }
     }
 }
-
