--- a/build.gradle
+++ b/build.gradle
@@ -8,15 +8,18 @@ repositories {
     mavenCentral()
 }
 
+def allureVersion = '2.23.0'
+def jacksonVersion = '2.15.2'
+
 allure {
     report {
-        version.set('2.23.0')
+        version.set(allureVersion)
     }
     adapter {
         aspectjWeaver.set(true)
         frameworks {
             junit5 {
-                adapterVersion.set('2.23.0')
+                adapterVersion.set(allureVersion)
             }
         }
     }
@@ -32,10 +35,10 @@ dependencies {
             'com.codeborne:selenide:6.15.0',
             'io.rest-assured:rest-assured:5.3.1',
             'org.junit.jupiter:junit-jupiter:5.9.3',
-            'com.fasterxml.jackson.core:jackson-databind:2.15.2',
-            'com.fasterxml.jackson.core:jackson-core:2.15.2',
-            'io.qameta.allure:allure-rest-assured:2.21.0',
-            'io.qameta.allure:allure-selenide:2.21.0',
+            "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}",
+            "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}",
+            "io.qameta.allure:allure-rest-assured:${allureVersion}",
+            "io.qameta.allure:allure-selenide:${allureVersion}",
             'com.github.javafaker:javafaker:1.0.2',
             'org.assertj:assertj-core:3.24.2',
             'net.lingala.zip4j:zip4j:2.11.5',
